# rust-http-server

./: .gitignore  Cargo.toml  Procfile  README.md
.github/workflows/: build.yml
migrations/2020-09-09-142240_create_persons/: down.sql  up.sql
src/: db.rs  main.rs  person.rs  routes.rs  schema.rs  tests.rs
web-server/: Cargo.toml
