[package]
name = "web-server"
version = "0.1.0"
authors = ["wh75er <wh75er.gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.5"
serde_json = "1.0.57"
dotenv = "0.9.0"
diesel = "1.4.5"
r2d2 = "0.8.9"
mockall = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = true
features = ["diesel_postgres_pool"]

