[package]
name = "web-server"
version = "0.1.0"
authors = ["wh75er <wh75er.gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde_json = "1.0.57"
